--- a/index.css
+++ b/index.css
@@ -194,11 +194,13 @@ table {
     z-index: 102;  /*權重>彈跳列表 */      
   }
   #menu-close{
+    display: none;
     position: absolute;  
     right: 0;  
     z-index: 102;  /*權重>彈跳列表 */   
   }
   #popup-menu-mobile{
+    display: none;
     flex-direction: column;
     position: fixed;
     top : 0;
