--- a/index.css
+++ b/index.css
@@ -145,8 +145,10 @@ table {
     justify-content: center;
     align-items: center;
     text-align: center;
+    padding: 10px;
     background-color: white;
-    opacity: 0.55;
+    opacity: 0.5;
+    z-index: 102;
   }  
 }
 @media screen  and (max-width:1200px) {   
