--- a/index.css
+++ b/index.css
@@ -148,7 +148,7 @@ table {
     padding: 10px;
     background-color: white;
     opacity: 0.5;
-    z-index: 102;  /*確保蓋過背景圖*/
+    z-index: 102;  /*蓋過背景圖*/
   }  
 }
 @media screen  and (max-width:1200px) {   
