--- a/week4/templates/index.html
+++ b/week4/templates/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>  
             <h1 class="m-title">歡迎光臨，請輸入帳號密碼</h1>       
-            <form id="signinForm" class="m-form">
+            <form id="signinForm" class="m-form" action="/signin" method="post">
                 <p class="m-subtitle">登入系統</p>
                 <div>
                     <label for="username">帳號</label>
